--- a/config.json
+++ b/config.json
@@ -1,9 +1,15 @@
 {
-    "BitRateBlockingProbability": [
-        "BitRate blocking probability",
-        "General requested bitRate"
+    "directories": [
+        "GCX_GreedReoptimization_CircuitBlocked_XT_XTO_001",
+        "GC_GreedReoptimization_CircuitFinalized_001"
     ],
-    "BlockingProbability": [
-        "Blocking probability"
-    ]
+    "metrics": {
+        "BitRateBlockingProbability": [
+            "BitRate blocking probability",
+            "General requested bitRate"
+        ],
+        "BlockingProbability": [
+            "Blocking probability"
+        ]
+    }
 }
