--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
     "directories": [
         "GCX_GreedReoptimization_CircuitBlocked_XT_XTO_001",
-        "GC_GreedReoptimization_CircuitFinalized_001"
+        "GC_GreedReoptimization_CircuitFinalized_001",
+        "NR_NoReallocation"
     ],
     "metrics": {
         "BitRateBlockingProbability": [
