fix: Retornando mensagem correta ao salvar
Agora o código está retornando uma mensagem ao salvar o arquivo.
A função que requisita arquivos CSV agora usa uma lista de diretórios.

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "directories": [
-        "GCX_GreedReoptimization_CircuitBlocked_XT_XTO_001",
-        "GC_GreedReoptimization_CircuitFinalized_001",
-        "NR_NoReallocation"
+        "GreedReoptimization_CircuitBlocked_XT_XTO_001",
+        "GreedReoptimization_CircuitFinalized_001",
+        "NoReallocation"
     ],
     "metrics": {
         "BitRateBlockingProbability": [
