feat: Adiciona campos para configuração do gráfico
Adiciona os campos:
- `figsize`: Tamanho da figura do gráfico.
- `fontsize`: Tamanho da fonte do gráfico.

--- a/config.json
+++ b/config.json
@@ -6,11 +6,7 @@
     ],
     "metrics": {
         "BitRateBlockingProbability": [
-            "BitRate blocking probability",
-            "General requested bitRate"
-        ],
-        "BlockingProbability": [
-            "Blocking probability"
+            "BitRate blocking probability"
         ]
     }
 }
