feat: Permite escolha de cargas #6
- O usuário pode escolher quais cargas deseja visualizar nos gráficos preenchendo o valor das cargas desejadas.
- Ele também pode escolher pelo arquivo de configuração:
    - "loads": lista de cargas
    - "load-filter": filtro para as cargas
        - "" ou sem o campo: todas
        - "i-j": intervalo de cargas (i até j)
        - "i,j": cargas ou intervalos específicos (i e j)

--- a/config.json
+++ b/config.json
@@ -8,5 +8,14 @@
         "BitRateBlockingProbability": [
             "BitRate blocking probability"
         ]
+    },
+    "graph-config": {
+        "loads": [
+            "200",
+            "300",
+            "400",
+            "500"
+        ],
+        "load-filter": "1-4"
     }
 }
