fix: Corrige formato das exportações

--- a/config.json
+++ b/config.json
@@ -6,7 +6,14 @@
     },
     "metrics": {
         "BitRateBlockingProbability": [
-            "BitRate blocking probability"
+            "BitRate blocking probability",
+            "BitRate blocking probability by Crosstalk",
+            "BitRate blocking probability by Crosstalk in Others"
+        ],
+        "BlockingProbability": [
+            "Blocking probability",
+            "Blocking probability by crosstalk",
+            "Blocking probability by crosstalk in other"
         ]
     },
     "graph-config": {
